latest course add

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body{
 main {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .container{
   background-color: #ffffffff;
@@ -85,9 +87,37 @@ hr{
   font-weight: 400;
 }
 
-
-
-
-
-
 /* top blogs section  end */
+
+/* latest blogs section ------ */
+.last-courses{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 35px;
+}
+.course .course-img{
+  width: 264px;
+  height: 141px;
+}
+.star img{
+  width: 15px;
+  height: 15px;
+}
+.time img{
+  width: 20.034px;
+  height: 20.034px;
+}
+.course-title{
+  color: #1E1E1E;
+  font-size: 20.034px;
+  font-weight: 500;
+}
+.course h5{
+  color: #ED6B4F;
+  font-size: 14.691px;
+  font-weight: 400;
+}
+.rating {
+  display: flex;
+  justify-content: space-between;
+}
